# HaskellBookExercises

./: .gitignore  AHeadCode.hs  Arith3Broken.hs  Chapter2Exercises.hs  Chapter5Exercises.hs  HaskellProgrammingNotes.md  Reverse.hs  Sing.hs  VigenereCipher.hs  addWeird2.hs  addweird.hs  arith2.hs  arith4.hs  caseExercises.hs  chapter10exercises.hs  chapter10exercises_databaseProcessing.hs  chapter10exercises_scans.hs  chapter11examples_sumOfProducts.hs  chapter11exercises_asPatterns.hs  chapter11exercises_binTreeToList.hs  chapter11exercises_foldBinaryTrees.hs  chapter11exercises_huttonsRazor.hs  chapter11exercises_languageExercises.hs  chapter11exercises_logicGoats.hs  chapter11exercises_mapTree.hs  chapter11exercises_phoneExercise.hs  chapter11exercises_programmers.hs  chapter11exercises_vehicles.hs  chapter3exercises.hs  chapter4exercises.hs  chapter4exercises.txt  chapter6exercises.hs  chapter7_guardDutyExercises.hs  chapter7_orderingHof.hs  chapter7exercises.hs  chapter8exercises.hs  chapter9_enumFromTo.hs  chapter9_thyFearfulSymmetry.hs  chapter9_zippingExercises.hs  chapter9exercises_dataChar.hs  (+20 more)
chapter13/: gimmePerson.hs  palindromeIO.hs
chapter14/: package.yaml
chapter15/: maybeAnotherMonoid.hs  package.yaml  semigroupExercises.hs
chapter16/: package.yaml
chapter17/: package.yaml
chapter18/: package.yaml
chapter20/: package.yaml
chapter21/: package.yaml
chapter22/: package.yaml
chapter23/: package.yaml
chapter24/: LICENSE  (+2 more)
fingerd/: LICENSE  finger.db  fingerd.cabal
fingerd/src/: Db.hs  DbClient.hs  Debug.hs  Main.hs  Parse.hs  Queries.hs
(+122 files in other folders)
