name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JamieWohletz/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Jamie Wohletz
maintainer:          reflectiveresistance@gmail.com
copyright:           Copyright (c) Jamie Wohletz
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable dbclient
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             DbClient.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Queries
                     , Db
                     , Parse
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
                     , trifecta
